2016-01-06 David Hohn <david.hohn@cern.ch>
	* add systematic variations of btag SF and PU event weights, only stored in nominal Tree

2016-01-05 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* bug fix systematic trees: Variables constructor moved outside the systematic loop in ttHMultileptonLooseEventSaver.cxx

2016-01-05 David Hohn <david.hohn@cern.ch>
	* migrate to Top,2.3.37

2016-01-05 David Hohn <david.hohn@cern.ch>
	* tag ttHMultiAna-00-00-04
	* last tag to use Top,2.3.33

2015-12-16 David Hohn <david.hohn@cern.ch>
	* added back 410000 config for PRW and default back to 410000
	* be careful when removing these, I think we need at least one config for each mc campaign

2015-12-09 David Hohn <david.hohn@cern.ch>
	* bug fix for tau counting, EleOLR was backwards
	* addresses ATLASTTHML-32

2015-12-10 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* clean up of empty unused variables: some lep_*, JetBDT* tau, and muons variables not needed anymore
	* include topoetcone/ptvarcone variables for lep_*
	
2015-12-10 Giuseppe Salamanna <salaman AT cern.ch>
	* data: add PURWT confog file for new MC15b 410009
	
2015-12-09 David Hohn <david.hohn@cern.ch>
	* add tau substructure variables, electron LH score if overlapping with tau, empty until available in derivation
	* add flat taus, just one for now but is extensible
	* add all tau SFs, uses unreleased code of AnalysisTop so not active yet

2015-12-09 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* include missing variables: HT, HT_lep, HT_jets, sublead/lead_jetPt/Eta/Phi
	* fill empty variables: lep_isTrigMatch_X, lep_sigd0PV_X, lep_Z0SinTheta_X
	
2015-12-08 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: correct name of Btag weight per event
	
2015-12-04 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: added Btag weight per event
	* generic_config-*15.txt changed jet pt and eta selections, changed